[package]
description = "A Tuxedo piece that allows upgrading the runtime code of a live chain dynamically"
edition = "2021"
name = "runtime-upgrade"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { features = [ "derive" ], workspace = true }
scale-info = { features = [ "derive" ], workspace = true }
serde = { features = [ "derive" ], workspace = true }
sp-io = { default_features = false, workspace = true }
sp-runtime = { default_features = false, workspace = true }
sp-std = { default_features = false, workspace = true }
sp-storage = { default_features = false, workspace = true }
tuxedo-core = { default-features = false, path = "../../tuxedo-core" }

[features]
default = [ "std" ]
std = [
	"tuxedo-core/std",
	"parity-scale-codec/std",
	"sp-runtime/std",
	"serde/std",
	"sp-std/std",
	"sp-io/std",
	"sp-storage/std",
]
